<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:fitsSystemWindows="true">

    <fragment
        android:id="@+id/dashboard_map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/drawer_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#fafafa">


        <FrameLayout
            android:id="@+id/user_infos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/user_cover_image"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_header" />

            <RelativeLayout
                android:id="@+id/user_info_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button_logout"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/text_logout"
                    android:textColor="#fff" />

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/user_profile_photo"
                    android:layout_width="68dp"
                    android:layout_height="68dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="8dp"
                    android:src="@drawable/default_avatar"
                    app:civ_border="true"
                    app:civ_border_color="#fff"
                    app:civ_border_width="1.5dp"
                    app:civ_shadow="true"
                    app:civ_shadow_color="#6000"
                    app:civ_shadow_radius="4.5" />

                <TextView
                    android:id="@+id/user_profile_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_profile_photo"
                    android:layout_marginStart="16dp"
                    android:text=""
                    android:textColor="#fff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_profile_pin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_profile_username"
                    android:layout_marginStart="16dp"
                    android:text=""
                    android:textColor="#fff"
                    android:textStyle="bold" />
            </RelativeLayout>
        </FrameLayout>


        <RelativeLayout
                android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/user_infos"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/loc_management_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_section_tracking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/text_loc_management"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1.5dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:background="@color/colorPrimary"
                        android:padding="4dp" />

                    <TextView
                        android:id="@+id/text_tracking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="16dp"
                        android:text="@string/text_tracking"
                        android:textColor="#9e9e9e"
                        android:textStyle="bold" />

                    <ListView
                        android:id="@+id/list_tracked_users"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tracking_me_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/loc_management_container"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_section_tracking_me"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/text_whos"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1.5dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:background="@color/colorPrimary"
                        android:padding="4dp" />

                    <TextView
                        android:id="@+id/text_whos_tracking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="16dp"
                        android:text="@string/text_no_one_tracking"
                        android:textColor="#9e9e9e"
                        android:textStyle="bold" />

                    <ListView
                        android:id="@+id/list_tracking_me"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:visibility="gone" />

                </LinearLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button_add_user"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:text="@string/text_add_user"
                    android:textColor="#fff"
                    app:backgroundTint="@color/colorPrimary" />
        </RelativeLayout>
    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>